<resources>
    <string name="app_name">SimpleBackgroundTask</string>
    <string name="ready_to_start">Ready To Start</string>
    <string name="start_task">Start Task</string>
    <string name="loading">Loading</string>
    <string name="done">Done</string>
    <string name="title_user_detail">CHI TIẾT THÔNG TIN CÁ NHÂN</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="status">Status:</string>
</resources>